# churn-prediction-app

./: .gitignore  README.md  app.py  example_data.pkl  preprocessor.pkl  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_direct_modeling.ipynb  03_preprocessed_modeling.ipynb  04_tuning_comparison.ipynb
